tests/out/error/redef/type.out
error: redfinition of "All"
tests/out/error/redef/type.in.bt:1:1 conflict: type
tests/out/error/redef/type.in.bt:2:1 conflict: type
